API Settings menu rework (no longer supporting direct endpoints)

--- a/public/locales/en/main.json
+++ b/public/locales/en/main.json
@@ -17,7 +17,7 @@
   "export": "Export",
   "author": "Made by Jing Hua",
   "about": "About",
-  "api": "API",
+  "api": "API Endpoint Settings",
   "personal": "Personal",
   "free": "Free",
   "downloadChat": "Download Chat",
