Settings menu improvements, toggle tooltips; Complete dropping of the "Advanced Mode" toggle. New toggle "Add Company System Prompt".

--- a/public/locales/en/main.json
+++ b/public/locales/en/main.json
@@ -37,7 +37,8 @@
   "search": "Search",
   "total": "Total",
   "enterToSubmit": "Enter to Submit",
-  "advancedMode": "Show System Prompt",
+  "showSystemPromptToggle": "Show System Prompt",
+  "addCompanyPromptToggle": "Add Company-Provided System Prompt",
   "countTotalTokens": "Show Accumulated Costs",
   "requestTokensCount": "Show Request Tokens Count",
   "chatNamesAsPageTitles": "Use Chat Names as Page Titles",
