--- a/public/locales/ru/main.json
+++ b/public/locales/ru/main.json
@@ -31,7 +31,8 @@
   "image": "Изображение",
   "autoTitle": "Автоматическое создание заголовка",
   "chatNamesAsPageTitles": "Называть таб по заголовоку текущего чата",
-  "advancedMode": "Показывать системное сообщение",
+  "showSystemPromptToggle": "Показывать системное сообщение",
+  "addCompanyPromptToggle": "Добавить сист. сообщ. от компании",
   "inlineLatex": "Встроенный Latex",
   "prompt": "Подсказка",
   "promptLibrary": "Библиотека подсказок",
