--- a/public/locales/en/main.json
+++ b/public/locales/en/main.json
@@ -25,6 +25,9 @@
   "assistant": "Assistant",
   "system": "System",
   "newChat": "New Chat",
+  "yourSystemPrompt": "Your Additional System Prompt",
+  "companySystemPrompt": "Company System Prompt",
+  "language": "Language",
   "lightMode": "Light Mode",
   "darkMode": "Dark Mode",
   "setting": "Settings",
@@ -38,7 +41,7 @@
   "total": "Total",
   "enterToSubmit": "Enter to Submit",
   "showSystemPromptToggle": "Show System Prompt",
-  "addCompanyPromptToggle": "Add Company-Provided System Prompt",
+  "addCompanyPromptToggle": "Use Company-Provided System Prompt",
   "countTotalTokens": "Show Accumulated Costs",
   "requestTokensCount": "Show Request Tokens Count",
   "chatNamesAsPageTitles": "Use Chat Names as Page Titles",
