Improvement: modal windows layout (vertical scrolling, sticky title and buttons)

--- a/public/locales/en/model.json
+++ b/public/locales/en/model.json
@@ -1,5 +1,5 @@
 {
-  "configuration": "Configuration",
+  "configuration": "Chat Model Configuration",
   "model": "Model",
   "maxGenerationTokens": {
     "label": "Max Gen Tokens",
