--- a/public/locales/ru/model.json
+++ b/public/locales/ru/model.json
@@ -1,5 +1,5 @@
 {
-  "configuration": "Конфигурация",
+  "configuration": "Конфигурация Модели Чата",
   "model": "Модель",
   "token": {
     "label": "Макс. токенов",
