Feature: replace current chat toggle (also, small code refactoring - moved toggle components to another folder)

--- a/public/locales/en/main.json
+++ b/public/locales/en/main.json
@@ -56,5 +56,6 @@
   "cloneChat": "Clone Chat",
   "cloned": "Chat Cloned",
   "submitPlaceholder": "Type a message...",
-  "logout": "Logout"
+  "logout": "Logout",
+  "replaceCurrentChatToggle": "Drop active chat when New Chat is created"
 }
