--- a/public/locales/ru/model.json
+++ b/public/locales/ru/model.json
@@ -39,6 +39,6 @@
   "traditionalLLMDescription": "Опираются на механизм внимания к контекстному окну и предобученные знания о мире, для немедленного ответа слово-за-словом. Рафинированный интеллект.",
   "reasoningIterative": "Модели рассуждения и итерации",
   "reasoningIterativeDescription": "\"Рассуждающая\" модель думает перед ответом. Она использует свою базовую LLM (4o-mini или 4o) для планирования многоступенчатого процесса мышления, затем рассуждает \"вслух\" (но тихо - внутри) и проводит несколько циклов рассуждения, пока сама не будет удовлетворена и готова ответить.",
-  "confirmationTitle": "Подтверждение: {{model}}",
+  "confirmationTitle": "Подтверждение",
   "choiceConfirmationPrompt": "{{prompt}}"
 }
