Added Demo mode for public deployment

--- a/public/locales/en/main.json
+++ b/public/locales/en/main.json
@@ -26,7 +26,7 @@
   "system": "System",
   "newChat": "New Chat",
   "yourSystemPrompt": "Your Additional System Prompt",
-  "companySystemPrompt": "Company System Prompt",
+  "companySystemPrompt": "Built-In System Prompt",
   "language": "Language",
   "lightMode": "Light Mode",
   "darkMode": "Dark Mode",
